src/objects/FSTR__PCE_Step__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>Individual step in a defined business process.</description>
    <fields>
        <fullName>FSTR__Approval_Status__c</fullName>
        <inlineHelpText>If a task is approved, the task is set to the selected status.</inlineHelpText>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Assignee_Type__c</fullName>
        <inlineHelpText>Choose whether this step is assigned to a specific user or a role based on client team.</inlineHelpText>
        <label>Assignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>User Field</fullName>
                </value>
                <value>
                    <fullName>Parent Object Owner</fullName>
                </value>
                <value>
                    <fullName>Related Account Owner</fullName>
                </value>
                <value>
                    <fullName>Process Team Role</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                    <label>Team Member Role</label>
                </value>
                <value>
                    <fullName>Salesforce Account Team Role</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Executing User</fullName>
                </value>
                <value>
                    <fullName>Parent Event Assignee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A specific user that this step should be assigned to</inlineHelpText>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Process_Definition_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Chatter_Notification_Message__c</fullName>
        <label>Chatter Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Chatter_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Clause_Bundle_Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Collaborate_Solution__c</fullName>
        <label>Collaborate Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Complete_With_Status__c</fullName>
        <inlineHelpText>When a checklist is complete, it will set the status of the step to this value.</inlineHelpText>
        <label>Complete With Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Composer_Email_Template_Id__c</fullName>
        <label>Composer Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Composer_Email_Template_Name__c</fullName>
        <label>Composer Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Composer_Solution_Name__c</fullName>
        <label>Composer Solution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Composer_Solution__c</fullName>
        <label>Composer Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Copy_Subject_From_Parent_Process_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will tell the system to copy the subject field from the parent process object to the subject/name of this step.</inlineHelpText>
        <label>Copy Subject From Parent Process Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Create_On_First_Match_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows duplicate steps by default anytime reevaluation criteria is met. If checked, will only ever create one step no matter how many times the reevaluation criteria is met.</description>
        <inlineHelpText>Allows duplicate steps by default anytime reevaluation criteria is met. If checked, will only ever create one step no matter how many times the reevaluation criteria is met.</inlineHelpText>
        <label>Create On First Match Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Create_if_Parent_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field has been superseded by the Create If Parent Field.</inlineHelpText>
        <label>Create if Parent Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Create_if_Parent_Completed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This field has been superseded by the Create If Parent Field.</inlineHelpText>
        <label>Create if Parent Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Create_if_Parent__c</fullName>
        <inlineHelpText>This field indicates the status(es) that will permit creation of this Step.  The Parent Step status must be set to one of these values for this step to create.</inlineHelpText>
        <label>Create if Parent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Create_with_Status__c</fullName>
        <inlineHelpText>The step will be created with the status value set in this field.</inlineHelpText>
        <label>Create with Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Cumulative_Date_Adjustment__c</fullName>
        <formula>FSTR__Parent_Step__r.FSTR__Due_Date_Adjustment__c+FSTR__Due_Date_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Date Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Default_Assignee_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional. Choose to default to this User when one is not found using the configured Assignee Type. If this field is not set, Conga Orchestrate will default to the Process Object owner.</inlineHelpText>
        <label>Contingent Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition__c</fullName>
        <inlineHelpText>This is the Business Process that this step belongs to.</inlineHelpText>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Steps (Definition)</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Delay_Creation_Base_Date__c</fullName>
        <inlineHelpText>The date selected in this field will be used to calculate the delayed creation of this step.</inlineHelpText>
        <label>Delay Creation Base Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Date</fullName>
                </value>
                <value>
                    <fullName>Parent Object</fullName>
                </value>
                <value>
                    <fullName>Date Field</fullName>
                </value>
                <value>
                    <fullName>Parent Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Delay_Creation_Date_Adjustment__c</fullName>
        <inlineHelpText>This number can be negative or positive. It will be added or subtracted from the date specified in the Delay Creation Base Date field.</inlineHelpText>
        <label>Delay Creation Date Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Delay_Creation_Date_Field_Name__c</fullName>
        <label>Delay Creation Date Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Delay_Creation_Date_Field__c</fullName>
        <label>Delay Creation Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Delay_Creation_Time__c</fullName>
        <label>Delay Creation Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                    <default>true</default>
                    <label>12:00 AM</label>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Delay_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Conga Orchestrate will delay creating this step until the day specified by the Send Date Adjustment.</inlineHelpText>
        <label>Delay Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <inlineHelpText>This is the text of the step.  When the step is generated these are the instructions to the user that are inserted in the step object.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Do_Not_Reopen__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If this step has already been Closed do not reopen it if the Due Date Adjustment Base Date is modified.</inlineHelpText>
        <label>Do Not Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Document_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to set this step as a Document Merge step</inlineHelpText>
        <label>Document Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date_Adjustment_Base_Date__c</fullName>
        <inlineHelpText>The date selected in this field will be used to calculate the due date of this step.</inlineHelpText>
        <label>Due Date Adjustment Base Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Date</fullName>
                </value>
                <value>
                    <fullName>Parent Object</fullName>
                </value>
                <value>
                    <fullName>Date Field</fullName>
                </value>
                <value>
                    <fullName>Parent Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date_Adjustment_Date_Field_Name__c</fullName>
        <label>Due Date Adjustment Date Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date_Adjustment_Date_Field__c</fullName>
        <description>Designates the field that due dates will be based off of</description>
        <inlineHelpText>Designates the field that due dates will be based off of</inlineHelpText>
        <label>Due Date Adjustment Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date_Adjustment__c</fullName>
        <inlineHelpText>This number can be negative or positive.  It will be added or subtracted from the date specified in the Due Date Adjustment Base Date field.</inlineHelpText>
        <label>Due Date Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Additional_To__c</fullName>
        <inlineHelpText>List of additional Email To Addresses separated by semi colons (;).</inlineHelpText>
        <label>Email Additional To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this step will send an email alert.</inlineHelpText>
        <label>Email Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_BCC__c</fullName>
        <label>Email BCC</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_From_Name__c</fullName>
        <inlineHelpText>Email Address this email alert will be sent from.</inlineHelpText>
        <label>Email From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_From__c</fullName>
        <inlineHelpText>Id of the from email, this is either a user id or a org wide email address id.</inlineHelpText>
        <label>Email From (Sender)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Template_Id__c</fullName>
        <inlineHelpText>Id of the email template to be used.</inlineHelpText>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Template_Name__c</fullName>
        <inlineHelpText>Name of the template the email alert will use.</inlineHelpText>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_To_Target__c</fullName>
        <description>This field dictates how merge fields are populated on the email template. If the template has User merge fields select User and if the email template has Contact, Account or process object merge fields select Contact.</description>
        <inlineHelpText>This field dictates how merge fields are populated on the email template. If the template has User merge fields select User and if the email template has Contact, Account or process object merge fields select Contact.</inlineHelpText>
        <label>Email Template Merge Field Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Email_To__c</fullName>
        <inlineHelpText>Field to Store all of the selected Email To Address Options.</inlineHelpText>
        <label>Email To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked then this step is a placeholder for an event. This is used to manage steps related to event occurences.</inlineHelpText>
        <label>Event Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Sub_Type__c</fullName>
        <inlineHelpText>This field is a placeholder for the event sub types that the event placeholder is for.  This field is populated from a multi-select list on the edit page.</inlineHelpText>
        <label>Event Sub Type</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Step is a Field Update</inlineHelpText>
        <label>Field Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Validation_Message__c</fullName>
        <defaultValue>&quot;You may not complete this step because of one or more ProcessComposer Step Validation rules.&quot;</defaultValue>
        <inlineHelpText>When using Step field validations, present users with this message.</inlineHelpText>
        <label>Validation Rule Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Generate_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box and an email will be generated notifying the assignee when this step is created.</description>
        <inlineHelpText>Check this box and an email will be generated notifying the assignee when this step is created.</inlineHelpText>
        <label>Generate Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Generate_SMS_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like the assignee of this step to have a SMS (text) message sent to their mobile number.  This will only work if their mobile number is specified in their user record and Twilio information is defined in your custom settings.</inlineHelpText>
        <label>Generate SMS Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Generate_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this step should generate a step in the system.  This is used with the Web Service Callout functionality.  If it is checked a step will be generated along with the callout.  If unchecked only the callout will happen.</description>
        <inlineHelpText>Indicates if this step should generate a step in the system.  This is used with the Web Service Callout functionality.  If it is checked a step will be generated along with the callout.  If unchecked only the callout will happen.</inlineHelpText>
        <label>Generate Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Go_Back_To_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Go Back To Stage</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>FSTR__PCE_Stage__c.FSTR__Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.FSTR__Definition__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSTR__PCE_Stage__c</referenceTo>
        <relationshipName>Go_Back_To_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Go_Back_To_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Go Back To Step</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>FSTR__PCE_Step__c.FSTR__Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.FSTR__Definition__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipName>Go_Back_To_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Ignore_In_Stage_Completion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field allows users to put conditionality around Stage steps: the option to exclude a Step from calculation of Stage completion and therefore when child steps create.  It defaults to unchecked (false).</description>
        <inlineHelpText>Ignore this step when determining whether Stage child steps should be created. Only applies if this Step is part of a Stage and it has field dependencies. See documentation.</inlineHelpText>
        <label>Ignore In Stage Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__In_Progress_Status__c</fullName>
        <inlineHelpText>When a checklist has been started, the related step object&apos;s status will change to the selected status.</inlineHelpText>
        <label>In Progress Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Is_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true, the step will not be evaluated.</description>
        <inlineHelpText>When this is checked, the Step will not be evaluated during execution of a definition.</inlineHelpText>
        <label>Is Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Is_Deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows admins to choose whether or not process steps can be deleted.</description>
        <inlineHelpText>Select whether steps created can be deleted.</inlineHelpText>
        <label>Deletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Button_Id__c</fullName>
        <label>Merge Button Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Button_Name__c</fullName>
        <label>Merge Button Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Product_Name__c</fullName>
        <label>Merge Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Product__c</fullName>
        <label>Merge Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Result_File_Name_Prefix__c</fullName>
        <inlineHelpText>Choose a field that will be used as the prefix for the generated file name.  The resulting file name will be in the form &quot;Value from selected field - Step name&quot;.  If nothing is chosen it  will default to have the form &quot;Process name - Step Name.</inlineHelpText>
        <label>Merge Result File Name Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Submit_ESign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If E-Signature is enabled for the selected template, you may submit for e-signature by selecting this box.</inlineHelpText>
        <label>Submit For E-Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Template_Id__c</fullName>
        <label>Merge Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Merge_Template_Name__c</fullName>
        <label>Merge Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Checklist_Items__c</fullName>
        <label>Number of Checklist Items</label>
        <summaryForeignKey>FSTR__PCE_Step_Checklist_Item__c.FSTR__Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Dependent_Fields__c</fullName>
        <label>Number of Dependent Fields</label>
        <summaryForeignKey>FSTR__PCE_Step_Field_Dependency__c.FSTR__Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Field_Validations__c</fullName>
        <label>Number of Validation Rules</label>
        <summaryForeignKey>FSTR__PCE_Step_Field_Validation__c.FSTR__Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Loop_Back_Criteria__c</fullName>
        <label>Number of Loop Back Criteria</label>
        <summaryForeignKey>FSTR__PCE_Step_Loop_Back_Criteria__c.FSTR__PCE_Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Record_Updates__c</fullName>
        <label>Number of Record Updates</label>
        <summaryForeignKey>FSTR__PCE_Step_Field_Update__c.FSTR__Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Reevaluation_Criteria__c</fullName>
        <label>Number of Reevaluation Criteria</label>
        <summaryForeignKey>FSTR__PCE_Step_Reevaluation_Criteria__c.FSTR__PCE_Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Obj_Data_1__c</fullName>
        <label>Obj Data 1</label>
        <length>32700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Obj_Data_2__c</fullName>
        <label>Obj Data 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Record_Type_To_Create_Name__c</fullName>
        <label>Object Record Type To Create Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Record_Type_To_Create__c</fullName>
        <inlineHelpText>This field stores the record type to create of the object to create object.  Ignored if this step is an event placeholder.</inlineHelpText>
        <label>Object Record Type To Create</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Type_To_Create_Name__c</fullName>
        <label>Object Type To Create Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Type_To_Create__c</fullName>
        <inlineHelpText>This holds the name of the object type to create for this step. Custom objects with status, description, and due date fields are allowed.  In addition, the Task object is allowed.  Ignored if this step is an event placeholder.</inlineHelpText>
        <label>Object Type To Create</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Output_to_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to have the Document Merge output the results as a PDF</inlineHelpText>
        <label>Output to PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition_to_Execute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is only used for non full version steps that kick off a process as a step</description>
        <inlineHelpText>this is only used for non full version steps that kick off a process as a step</inlineHelpText>
        <label>Definition to Execute</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipName>PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_ID__c</fullName>
        <description>Used to store the parent object id for hierarchy/chaining steps</description>
        <label>Parent Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Lookup_Field__c</fullName>
        <label>Parent Object Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field indicates what stage is a parent to this step.  If a step has a parent stage, all of the steps in the parent stage must be completed before this step is created.</inlineHelpText>
        <label>Parent Stage</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Invalid Parent Stage: Parent Stage must belong to the same definition as this step and not be the same as this Step&apos;s Stage.</errorMessage>
            <filterItems>
                <field>FSTR__PCE_Stage__c.FSTR__Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.FSTR__Definition__c</valueField>
            </filterItems>
            <infoMessage>Parent Stage must belong to the same definition as this step and not be the same as this Step&apos;s Stage.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSTR__PCE_Stage__c</referenceTo>
        <relationshipLabel>Steps (Parent Stage)</relationshipLabel>
        <relationshipName>Child_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>